// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component should render initial layout 1`] = `
Array [
  <div
    id="app"
  >
    <Context.Provider
      value={Array []}
    />
  </div>,
]
`;

exports[`Graph Container component renders correctly 1`] = `ShallowWrapper {}`;

exports[`Graph Container component should render initial layout 1`] = `
Array [
  <div
    id="graph-container"
  >
    <PieChart
      data={Object {}}
    />
    <CodeChart
      data={Object {}}
    />
  </div>,
]
`;

exports[`Request Display component renders correctly 1`] = `ShallowWrapper {}`;

exports[`Request Display component should render initial layout 1`] = `
Array [
  <div
    className="request"
  >
    <p>
      <strong>
        Method:
      </strong>
       
      GET
    </p>
    <p>
      <strong>
        Status:
      </strong>
       
      200
    </p>
    <p>
      <strong>
        Request Time:
      </strong>
       
      7:00:00 PM
    </p>
    <p>
      <strong>
        Processing Time:
      </strong>
       
      1e+1
      ms
    </p>
  </div>,
]
`;
